--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
         <hr>
         <div class="single-variant-selector">
-        <h4>Base Variant</h4>
+        <h4>Base Variant (keep this selector hidden from the UI)</h4>
         <select name="base" id="base">
           <option data-variant-id="111" value="Black / S">Black / S</option>
           <option data-variant-id="222" value="Black / M">Black / M</option>
